--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
     padding: 0px;
     margin: 0px;
     font-family: 'Courier New', Courier, monospace;
+    color: rgb(253,207,179);
+}
+body{
+    background-color: rgb(206,200,228);
 }
 .container{
     display: flex;
@@ -15,7 +19,7 @@
 }
 
 .site_display{
-    background-color: rgb(189, 189, 189);
+    background-color: rgb(249,247,232);
     border-radius: 10px;
     height: 50px;
     display: flex;
